      - PlayerMobile.m_JusticeProtectors
      - PlayerMobile.m_AntiMacroTable
      - PlayerMobile.m_Aggressors
      - PlayerMobile.m_Aggressed
      - BaseCreature.m_Owners
      - GenericBuyInfo.Name
      - GenericBuyInfo.DisplayCache.m_Table
      - GenericBuyInfo.DisplayCache.m_Mobiles
      - GenericSellInfo.m_Table
      - BaseWeapon: m_AosAttributes, m_AosWeaponAttributes
      - Guild.m_Allies, Guild.m_Enemies, Guild.m_WarDeclarations,
        Guild.m_WarInvitations, Guild.m_AllyDeclarations,
        Guild.m_AllyInvitations, Guild.m_Candidates, Guild.m_Accepted
      - Account.m_Comments, Account.m_Tags
    - use XmlReader instead of XmlDocument.Load() to parse the accounts file
    - use DateTime.Now cache
    - removed from Notoriety: CheckAggressor(), CheckAggressed()
  * extended API for optimization
    - Mobile: added AggressorsOrNull, FindAggressorByAttacker(),
      FindAggressorByDefender(), AggressedOrNull, FindAggressedByAttacker(),
      FindAggressedByDefender(), Peaceful
    - Mobile.Stabled: HasStabled(), AddStabled(), RemoveStabled(),
      StabledOrNull
    - Mobile.VisibilityList: ClearVisibilityList()
    - Mobile.PermaFlags: HasPermaFlags(), IsPermaFlaggedTo()
  * gameplay related bugfixes
    - blank keys should not be able to unlock doors with KeyValue 0 (patch
      from Kai Sassmannshausen)
    - check CanBeHarmful() in WhirlwindAttack
  * moved into separate script libraries:
    - Engines.MyRunUO
    - Engines.Reports
    - Engines.RemoteAdmin
  * upgraded log4net to 1.2.10
  * imported RunUO data and saves directory

 --

sunuo (0.3.1) unstable; urgency=low

  * optimizations in the serialization code
    - cache position in BinaryFileWriter
    - sealed the serialization classes
    - enlarged BinaryFileWriter's buffer to 32kB
  * removed BinaryFileWriter.UnderlyingStream
  * BinaryFileWriter.Flush() is private
  * Mobile: better SkillMod==null handling

 -- Max Kellermann <max@duempel.org>  Wed,  8 Feb 2006 23:26:45 +0100
